# PORCWeb

./: .gitignore  Cargo.toml  README.md  config.json
PORC-Front/: .env  .env.development  .env.production  .env.test  .prettierrc.json  README.md  env.d.ts  eslint.config.js  index.html  package-lock.json  package.json
PORC-Front/src/: App.vue  config.ts  main.ts
PORC-Front/src/API/: AppendURLQueryParam.ts  GetLoggedIn.ts  PostAccountInfo.ts  PostAvailability.ts  PostMatch.ts  clientIdentification.ts
PORC-Front/src/assets/: styles.scss
PORC-Front/src/components/: CalendarComponent.vue  DiscordUserComponent.vue  DivisionComponent.vue  DivisionSelectionComponent.vue  DivisionSelector.vue  EditMatchComponent.vue  ErrorPopupModel.vue  LeaderbordComponent.vue  MatchScoreComponent.vue  MatchStatusComponent.vue  PlayerSelectionComponent.vue  PlayerSelectorComponent.vue  SignUpFormComponent.vue  TimerComponent.vue
PORC-Front/src/models/: DivisionModel.ts  MatchModel.ts  Matchplan.ts  PlayerModel.ts  PlayerPerformancModel.ts  PubAccountInfo.ts  PubAccountInfoRecv.ts  SignUpInfo.ts  (+1 more)
src/: Season3MatchPlan.json  Season4SignUps.json  account_lib.rs  bot_communication.rs  client_communication.rs  data_lib.rs  discord_communication.rs  main.rs  storage_lib.rs
src/backend/: account_lib.rs  bot_communication.rs  client_communication.rs  data_lib.rs  discord_communication.rs  mod.rs  storage_lib.rs
src/liberary/: mod.rs
src/porcbot/: config.rs  mod.rs
static/: index.html
static/reccources/: PORCWeb public API.clip
userdata/: SeasonMatches.json  UserAccounts.json
(+234 files in other folders)
