[package]
name = "PORCWeb"
version = "0.1.0"
edition = "2021"

[dependencies]
async-std = { version = "1.8.0", features = ["attributes"] }
tide-websockets = "0.4.0"
tokio = { version = "1", features = ["full"] }
futures = "0.3.17"
askama = "0.12.1"
actix = "0.13.3"
actix-cors = "0.6.1"
actix-web = "4.0"
actix-http = "2.0"
actix-rt = "2.5"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
rand = "0.8"
actix-files = "0.6"
colored = "2.1"
flume = "0.11.1"
reqwest = { version = "0.11", features = ["json"] }
uuid = { version = "1", features = ["v4"] }
cookie = "0.18"
once_cell = "1.20.3"
serenity = "0.12"
dotenvy = "0.15"